--- a/public/login.html
+++ b/public/login.html
@@ -53,43 +53,26 @@
         const loginForm = document.getElementById('loginForm');
         const errorMessage = document.getElementById('error-message');
 
-        loginForm.addEventListener('submit', (event) => {
+        loginForm.addEventListener('submit', async (event) => {
             event.preventDefault();
 
-            const userData ={
+            const userData = {
                 email: document.getElementById('email').value,
                 password: document.getElementById('password').value
             };
 
-            // try {
-            //     const response = await axios.post('/login', userData);
-            //     console.log(response);
-            //     if (response && response.status == 200) {
-            //         alert(response.data.message);
-            //     }
-            //     // Display the error message returned from the backend
-            //     else {
-            //         throw new Error(response.data.message);
-            //     }
-            // } 
-            // catch (error) {
-            //     errorMessage.textContent = error.message;
-            // }
-
-            axios.post('/login', userData)
-                    .then(response => {
-                        console.log(response.data);
-                        if (response && response.status === 200) {
-                            alert(response.data.message);
-                        } else {
-                            throw new Error(response.data.message);
-                        }
-                    })
-                    .catch(error => {
-                        errorMessage.textContent = error.message;
-                    });
+            try {
+                const response = await axios.post('/login', userData);
+                console.log(response);
+                if (response && response.status === 200) {
+                    alert(response.data.message);
+                } else {
+                    throw new Error(response.data.message);
+                }
+            } catch (error) {
+                errorMessage.textContent = error.message;
+            }
         });
-            
     </script>  
 </body>
 </html>
