--- a/public/expense.html
+++ b/public/expense.html
@@ -6,7 +6,7 @@
     <title>Expense Details</title>
 </head>
 <body>
-    <form id="expenseForm" action="/expense/add-expense" method="POST">
+    <form id="expenseForm" action="/expense/data" method="POST">
         <div>
           <label for="amount">Amount:</label>
           <input type="number" id="amount" name="amount" required>
@@ -29,9 +29,9 @@
             <input type="date" id="date" name="date" required>
         </div>
         <button type="submit" onclick="handleSubmit(event)">Add Expense</button>
-      </form>
+    </form>
 
-      <div id="expenseList">
+    <div id="expenseList">
         <table class="table">
             <thead>
                 <tr>
@@ -44,125 +44,109 @@
                 </tr>
             </thead>
             <tbody id="expenseData">
-    
+
             </tbody>
         </table>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script>
+
+        function retrieveExpenseData() {
+            const token = localStorage.getItem('token');
+            axios.get('/expense/data', {headers: {"Authorization": token}})
+            .then(response => {
+                const expenseData = response.data;
+                console.log(expenseData);
+                const tableBody = document.getElementById('expenseData');
+                let tableHTML = '';
+
+                if (Array.isArray(expenseData)) {
+                    expenseData.forEach(expense => {
+                        tableHTML += `
+                        <tr id="row-id-${expense.id}">
+                            <td>${expense.id}</td>
+                            <td>${expense.amount}</td>
+                            <td>${expense.category}</td>
+                            <td>${expense.description}</td>
+                            <td>${expense.date}</td>
+                            <td>
+                                <button type="button" onclick="handleDelete('${expense.id}')">Delete</button>
+                            </td>
+                        </tr>
+                        `;
+                    });
+                }
+
+                tableBody.innerHTML = tableHTML;
+            })
+            .catch(error => {
+                console.log(error);
+            });
+        }        
+
+        const handleDelete = (expenseId)=> {
+            const token = localStorage.getItem('token');
+            if(confirm('Are you sure?')){
+                axios.delete(`/expense/delete/${expenseId}`, {
+                    headers: {"Authorization": token}
+                })
+                    .then(() => {
+                        const deletedRow = document.getElementById(`row-id-${expenseId}`);
+                        if(deletedRow){
+                            deletedRow.remove();
+                        }
+                    })
+                    .catch(error => {
+                        console.log(error);
+                    });
+                }
+        };
+
+        const handleSubmit = (event) => {
+            event.preventDefault();
+
+            const expenseData = {
+                amount: document.getElementById("amount").value,
+                category: document.getElementById("category").value,
+                description: document.getElementById("description").value,
+                date: document.getElementById("date").value
+            };
+
+            const token = localStorage.getItem('token');
+            axios.post('/expense/data', expenseData, {headers: {"Authorization": token}})
+            .then(response => {
+                const newExpense = response.data;
+                const tableBody = document.getElementById('expenseData');
+
+                const newRow = document.createElement('tr');
+                newRow.id = `row-id-${newExpense.id}`;
+                newRow.innerHTML = `
+                    <td>${newExpense.id}</td>
+                    <td>${newExpense.amount}</td>
+                    <td>${newExpense.category}</td>
+                    <td>${newExpense.description}</td>
+                    <td>${newExpense.date}</td>
+                    <td>
+                        <button type="button" onclick="handleDelete('${newExpense.id}')">Delete</button>
+                    </td>
+                `;
+
+                tableBody.appendChild(newRow);
+
+                // Clear input fields
+                document.getElementById("description").value = '';
+                document.getElementById("amount").value = '';
+                document.getElementById("category").value = '';
+                document.getElementById("date").value = '';
+            })
+            .catch(err => {
+                console.log(err);
+            });
+        };
+
+        document.addEventListener('DOMContentLoaded', retrieveExpenseData);
+
+    </script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script>
-  document.addEventListener('DOMContentLoaded', () => {
-  axios.get('/expense/add-expense')
-      .then(response => {
-          const expenseData = response.data;
-          const tablebody = document.getElementById('expenseData');
-          let tableHTML = '';
-
-          if(Array.isArray(expenseData)){
-              expenseData.forEach(expense => {
-                  tableHTML += `
-                  <tr id="row-id-${expense.id}">
-                      <td>${expense.id}</td>
-                      <td>${expense.amount}</td>
-                      <td>${expense.category}</td>
-                      <td>${expense.description}</td>
-                      <td>${expense.date}</td>
-                      <td>
-                          <button type="button" onclick="handleEdit('${expense.id}')">Edit</button>
-                          <button type="button" onclick="handleDelete('${expense.id}')">Delete</button>
-                      </td>
-                  </tr>
-                  `;
-              })
-          }
-
-          tablebody.innerHTML = tableHTML;
-      })
-      .catch(error => {
-          console.log(error);
-      });
-});
-
-const handleEdit = (expenseId) => {
-  const amount = document.getElementById("amount");
-  const category = document.getElementById("category");
-  const description = document.getElementById("description");
-  const date = document.getElementById("date");
-
-  axios.get(`/expense/add-expense/${expenseId}`)
-      .then(response => {
-          const expense = response.data;
-          if(expense){
-              amount.value = expense.amount;
-              category.value = expense.category;
-              description.value = expense.description;
-              date.value = expense.date;
-          }
-      })
-      .catch(error => {
-          console.log(error);
-      });
-
-      handleDelete(expenseId);
-};
-
-const handleDelete = (expenseId)=> {
-  if(confirm('Are you sure?')){
-      axios.delete(`expense/add-expense/${expenseId}`)
-          .then(() => {
-              const deletedRow = document.getElementById(`row-id-${expenseId}`);
-              if(deletedRow){
-                  deletedRow.remove();
-              }
-          })
-          .catch(error => {
-              console.log(error);
-          });
-      }
-};
-
-const handleSubmit = (event)=> {
-  event.preventDefault();
-  const expenseData = {
-      amount: document.getElementById("amount").value,
-      category: document.getElementById("category").value,
-      description: document.getElementById("description").value,
-      date: document.getElementById("date").value
-  };
-
-  axios.post('/expense/add-expense', expenseData)
-      .then(response => {
-          const newExpense = response.data;
-          const tablebody = document.getElementById('expenseData');
-
-          const newRow = document.createElement('tr');
-          newRow.id = `row-id-${newExpense.id}`;
-          newRow.innerHTML = `
-              <td>${newExpense.id}</td>
-              <td>${newExpense.amount}</td>
-              <td>${newExpense.category}</td>
-              <td>${newExpense.description}</td>
-              <td>${newExpense.date}</td>
-              <td>
-                  <button type="button" onclick="handleEdit('${newExpense.id}')">Edit</button>
-                  <button type="button" onclick="handleDelete('${newExpense.id}')">Delete</button>
-              </td>
-          `;
-
-          tablebody.appendChild(newRow);
-
-          // Clear input fields
-          document.getElementById("description").value = '';
-          document.getElementById("amount").value = '';
-          document.getElementById("category").value = '';
-          document.getElementById("date").value = '';
-      })
-      .catch(err => {
-              console.log(err);
-      });
-};
-</script>
 </html>
-
-
