--- a/public/expense.html
+++ b/public/expense.html
@@ -218,7 +218,7 @@
 
                 userLeaderBoardArray.forEach(userDetails => {
                 const listItem = document.createElement('li');
-                listItem.textContent = `Name: ${userDetails.name} Total Expenses: ${userDetails.total_cost}`;
+                listItem.textContent = `Name: ${userDetails.name} Total Expenses: ${userDetails.totalExpenses}`;
                 leaderBoardElement.appendChild(listItem);
                 });
             })
